--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <ion-app>
       <ion-header>
-        <ion-toolbar class="ion-text-center" color="primary">
+        <ion-toolbar class="ion-text-center" color="tertiary">
           <ion-title>CGPA CALCULATOR</ion-title>
         </ion-toolbar>
       </ion-header>
@@ -74,7 +74,7 @@
                   <ion-button id="clear" class="ion-margin-top" color="danger">
                     Clear <ion-icon name="backspace-outline"></ion-icon>
                   </ion-button>
-                  <ion-button id="add" class="ion-margin-top" size="12">
+                  <ion-button  color="tertiary" id="add" class="ion-margin-top" size="12">
                     Add Course <ion-icon name="add-outline"></ion-icon>
                   </ion-button>
                 </div>
@@ -84,6 +84,7 @@
                   id="calculate"
                   class="ion-margin-top"
                   size="12"
+                  color="tertiary"
                 >
                   Calculate
                 </ion-button>
@@ -92,7 +93,7 @@
                 <ion-row>
                   <ion-col size-sm="12" size-md="10" offset-md="1">
                     <ion-card class="result">
-                      <ion-button class="back" fill="clear">
+                      <ion-button class="back" color="tertiary" fill="clear">
                         <ion-icon name="return-up-back-outline"></ion-icon>
                       </ion-button>
                       <ion-card-header>
@@ -127,7 +128,7 @@
 
                     <ion-card>
                       <ion-card-header class="downloadCard">
-                        <ion-button id="print" fill="clear">
+                        <ion-button color="tertiary" id="print" fill="clear">
                           Download <ion-icon name="download-outline"></ion-icon>
                         </ion-button>
                       </ion-card-header>
@@ -141,7 +142,7 @@
       </ion-content>
 
       <ion-footer>
-        <ion-toolbar color="primary">
+        <ion-toolbar color="tertiary">
           <ion-title class="ion-text-center">
             <p>With <ion-icon name="heart-outline"></ion-icon> Melvin_Manni</p>
           </ion-title>
