--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
                   <ion-button id="clear" class="ion-margin-top" color="danger">
                     Clear <ion-icon name="backspace-outline"></ion-icon>
                   </ion-button>
-                  <ion-button  color="tertiary" id="add" class="ion-margin-top" size="12">
+                  <ion-button
+                    color="tertiary"
+                    id="add"
+                    class="ion-margin-top"
+                    size="12"
+                  >
                     Add Course <ion-icon name="add-outline"></ion-icon>
                   </ion-button>
                 </div>
@@ -125,14 +130,6 @@
                         </ion-text>
                       </ion-card-content>
                     </ion-card>
-
-                    <ion-card>
-                      <ion-card-header class="downloadCard">
-                        <ion-button color="tertiary" id="print" fill="clear">
-                          Download <ion-icon name="download-outline"></ion-icon>
-                        </ion-button>
-                      </ion-card-header>
-                    </ion-card>
                   </ion-col>
                 </ion-row>
               </ion-grid>
@@ -140,7 +137,9 @@
           </ion-row>
         </ion-grid>
       </ion-content>
-
+      <div id="capture" style="padding: 10px; background: #f5da55;">
+        <h4 style="color: #000;">Hello world!</h4>
+      </div>
       <ion-footer>
         <ion-toolbar color="tertiary">
           <ion-title class="ion-text-center">
@@ -159,6 +158,7 @@
       nomodule
       src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"
     ></script>
+    <script src="./print.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
